[project]
name = "lockscreen-rotate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dbus-python==1.4.0",
    "pycairo==1.29.0",
    "pygobject==3.56.2",
    "requests==2.33.1",
    "ytpb==2026.1.18",
]

[dependency-groups]
dev = [
	"ruff==0.15.2",
	"pytest==9.0.2",
	"ty==0.0.18",
]

[tool.uv]
add-bounds = "exact"

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = [
	"E", # Errors
	"F", # Pyflakes
	"W", # Warnings
	"C90", # Complexity
	"ANN", # Annotations
	"RUF", # Ruff
	"TID", # flake8 tidy imports
]
